// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Desktop Tabs Default Desktop Tabs 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        data-testid="component-wrapper"
      >
        <div>
          <div
            style="padding-top: 10px; display: flex;"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Tabs__TabBar-sc-1p6ka87-0 dlIGvq Sizeweb__Size-sc-1e5yf1-0 imAuUz Flexweb__Flex-sc-1yhcoea-0 bFyCSI"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 evtAoD Flexweb__Flex-sc-1yhcoea-0 iVAPqw"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 Tab__StyledTabTitle-sc-7u5d7y-0 hNfFQH Flexweb__Flex-sc-1yhcoea-0 kQSsmj"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 Tab__StyledIcons-sc-7u5d7y-1 dnYDuP Spaceweb__Space-sc-1abqisc-0 khECYA"
                  >
                    <svg
                      fill="none"
                      height="12"
                      viewBox="0 0 24 24"
                      width="12"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M12 21a9 9 0 100-18 9 9 0 000 18zm0 3c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12z"
                        fill="rgba(43, 131, 234, 1.0 )"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <div
                    class="Textweb__Text-sc-1qrdpx3-0 eEdtSY"
                    color="shade.980"
                    data-testid="ds-text"
                  >
                    Contact Details
                  </div>
                </div>
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 eGDtqX"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                      fill="rgba(43, 131, 234, 1.0 )"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 evtAoD Flexweb__Flex-sc-1yhcoea-0 ixFeuE"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 Tab__StyledTabTitle-sc-7u5d7y-0 hNfFQH Flexweb__Flex-sc-1yhcoea-0 kQSsmj"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 Tab__StyledIcons-sc-7u5d7y-1 dnYDuP Spaceweb__Space-sc-1abqisc-0 khECYA"
                  >
                    <svg
                      fill="none"
                      height="12"
                      viewBox="0 0 24 24"
                      width="12"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M12 21a9 9 0 100-18 9 9 0 000 18zm0 3c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12z"
                        fill="rgba(22, 47, 86, 0.87)"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <div
                    class="Textweb__Text-sc-1qrdpx3-0 fBxhuI"
                    color="shade.970"
                    data-testid="ds-text"
                  >
                    Business Overview
                  </div>
                </div>
              </div>
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 evtAoD Flexweb__Flex-sc-1yhcoea-0 ixFeuE"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 Tab__StyledTabTitle-sc-7u5d7y-0 hNfFQH Flexweb__Flex-sc-1yhcoea-0 kQSsmj"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 Tab__StyledIcons-sc-7u5d7y-1 dnYDuP Spaceweb__Space-sc-1abqisc-0 khECYA"
                  >
                    <svg
                      fill="none"
                      height="12"
                      viewBox="0 0 24 24"
                      width="12"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M12 21a9 9 0 100-18 9 9 0 000 18zm0 3c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12z"
                        fill="rgba(22, 47, 86, 0.87)"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <div
                    class="Textweb__Text-sc-1qrdpx3-0 fBxhuI"
                    color="shade.970"
                    data-testid="ds-text"
                  >
                    Business Details
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TabContent__StyledTabContent-sc-1k8bd29-0 gTa-DLO"
              width="calc(100% - 310px)"
            >
              <div>
                contact details tab
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="layerTestId"
          id="layerHost"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;

exports[`Storyshots Desktop Tabs Tabs Completed 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        data-testid="component-wrapper"
      >
        <div>
          <div
            style="padding-top: 10px; display: flex;"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 Tabs__TabBar-sc-1p6ka87-0 dlIGvq Sizeweb__Size-sc-1e5yf1-0 imAuUz Flexweb__Flex-sc-1yhcoea-0 bFyCSI"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 evtAoD Flexweb__Flex-sc-1yhcoea-0 iVAPqw"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 Tab__StyledTabTitle-sc-7u5d7y-0 hNfFQH Flexweb__Flex-sc-1yhcoea-0 kQSsmj"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 Tab__StyledIcons-sc-7u5d7y-1 dnYDuP Spaceweb__Space-sc-1abqisc-0 khECYA"
                  >
                    <svg
                      fill="none"
                      height="12"
                      viewBox="0 0 24 24"
                      width="12"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM19.0607 9.06066C19.6465 8.47487 19.6465 7.52513 19.0607 6.93934C18.4749 6.35355 17.5251 6.35355 16.9394 6.93934L9.93166 13.947L6.98778 11.3711C6.36432 10.8256 5.41668 10.8888 4.87116 11.5122C4.32563 12.1357 4.38881 13.0833 5.01226 13.6289L9.01226 17.1289C9.60657 17.6489 10.5023 17.6191 11.0607 17.0607L19.0607 9.06066Z"
                        fill="rgba(31, 137, 14, 0.54)"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <div
                    class="Textweb__Text-sc-1qrdpx3-0 eEdtSY"
                    color="shade.980"
                    data-testid="ds-text"
                  >
                    Contact Details
                  </div>
                </div>
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 eGDtqX"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                      fill="rgba(43, 131, 234, 1.0 )"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 evtAoD Flexweb__Flex-sc-1yhcoea-0 ixFeuE"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 Tab__StyledTabTitle-sc-7u5d7y-0 hNfFQH Flexweb__Flex-sc-1yhcoea-0 kQSsmj"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 Tab__StyledIcons-sc-7u5d7y-1 dnYDuP Spaceweb__Space-sc-1abqisc-0 khECYA"
                  >
                    <svg
                      fill="none"
                      height="12"
                      viewBox="0 0 24 24"
                      width="12"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM19.0607 9.06066C19.6465 8.47487 19.6465 7.52513 19.0607 6.93934C18.4749 6.35355 17.5251 6.35355 16.9394 6.93934L9.93166 13.947L6.98778 11.3711C6.36432 10.8256 5.41668 10.8888 4.87116 11.5122C4.32563 12.1357 4.38881 13.0833 5.01226 13.6289L9.01226 17.1289C9.60657 17.6489 10.5023 17.6191 11.0607 17.0607L19.0607 9.06066Z"
                        fill="rgba(31, 137, 14, 0.54)"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <div
                    class="Textweb__Text-sc-1qrdpx3-0 fBxhuI"
                    color="shade.970"
                    data-testid="ds-text"
                  >
                    Business Overview
                  </div>
                </div>
              </div>
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 evtAoD Flexweb__Flex-sc-1yhcoea-0 ixFeuE"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 Tab__StyledTabTitle-sc-7u5d7y-0 hNfFQH Flexweb__Flex-sc-1yhcoea-0 kQSsmj"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 Tab__StyledIcons-sc-7u5d7y-1 dnYDuP Spaceweb__Space-sc-1abqisc-0 khECYA"
                  >
                    <svg
                      fill="none"
                      height="12"
                      viewBox="0 0 24 24"
                      width="12"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM19.0607 9.06066C19.6465 8.47487 19.6465 7.52513 19.0607 6.93934C18.4749 6.35355 17.5251 6.35355 16.9394 6.93934L9.93166 13.947L6.98778 11.3711C6.36432 10.8256 5.41668 10.8888 4.87116 11.5122C4.32563 12.1357 4.38881 13.0833 5.01226 13.6289L9.01226 17.1289C9.60657 17.6489 10.5023 17.6191 11.0607 17.0607L19.0607 9.06066Z"
                        fill="rgba(31, 137, 14, 0.54)"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <div
                    class="Textweb__Text-sc-1qrdpx3-0 fBxhuI"
                    color="shade.970"
                    data-testid="ds-text"
                  >
                    Business Details
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Viewweb__View-sc-1o0hmxm-0 TabContent__StyledTabContent-sc-1k8bd29-0 gTa-DLO"
              width="calc(100% - 310px)"
            >
              <div>
                contact details tab
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="layerTestId"
          id="layerHost"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;
